--- a/BTTH06/css/btth06.css
+++ b/BTTH06/css/btth06.css
@@ -1,6 +1,6 @@
 .table{
     margin: auto;
-    width: 300px;
+    width: 600px;
     height: 100px;
     border: gray solid;
 }
@@ -8,26 +8,19 @@
     text-blink: ;
 }
 @-webkit-keyframes nhapnhay {
-    0% { color: red; }
-    100% { color: black;  }
+    0% { color: red;
+        transform: scale(1)}
+    100% { color: black;
+        transform: scale(1.2)}
 }
-@-moz-keyframes nhapnhay {
-    0% { color: red; }
-    100% { color: black;  }
-}
-@-o-keyframes nhapnhay {
-    0% { color: red; }
-    100% { color: black;  }
-}
-@keyframes nhapnhay {
-    0% { color: red; }
-    100% { color: black;  }
-}
+
 #thongbao {
     font-size:24px;
     font-weight:bold;
-    -webkit-animation: nhapnhay 700ms infinite;
-    -moz-animation: nhapnhay 700ms infinite;
-    -o-animation: nhapnhay 700ms infinite;
     animation: nhapnhay 700ms infinite;
+}
+#time{
+    font-size: 30px;
+    background: black;
+    color: red;
 }
