--- a/BTTH06/css/btth06.css
+++ b/BTTH06/css/btth06.css
@@ -1,8 +1,8 @@
-.table{
+table , tr , th  {
     margin: auto;
     width: 600px;
     height: 100px;
-    border: gray solid;
+    border: 3px gray solid;
 }
 #thongbao{
     text-blink: ;
@@ -23,4 +23,5 @@
     font-size: 30px;
     background: black;
     color: red;
+
 }
